correction on align of about page

--- a/css/man.css
+++ b/css/man.css
@@ -222,9 +222,9 @@ nav .logo {
 
 .about-page .content {
     display: flex;
-    margin-top: 10rem;
     flex-direction: row;
     justify-content: space-evenly;
+    align-items: center;
     width: 80%;
     height: 100%;
 }
